# AI_Research_Assistant

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  research_output.txt  tools.py
templates/: index.html
